--- a/webapp/personaLib.html
+++ b/webapp/personaLib.html
@@ -22,6 +22,27 @@
 <body>
 	<!-- menu panel -->
 	{% csrf_token %}
+	<!-- Navigation bar -->
+	<nav class="navbar navbar-dark bg-dark">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+				 aria-expanded="false">
+					Menu
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="#">Books</a>
+					<a class="dropdown-item" href="#">Authors</a>
+					<a class="dropdown-item" href="#">Publishers</a>
+				</div>
+			</li>
+		</ul>
+		<form class="form-inline my-2 my-lg-0">
+			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		</form>
+	</nav>
+
 	<div class="container-fluid">
 		<p>personaLib</p>
 	</div>
