--- a/webapp/personaLib.html
+++ b/webapp/personaLib.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/personaLib.js' %}"></script>
 </head>
 
 <!-- Page body -->
@@ -37,20 +38,21 @@
 				</div>
 			</li>
 		</ul>
+
 		<form class="form-inline my-2 my-lg-0">
 			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 		</form>
 	</nav>
 
-	<div class="container-fluid">
-		<p>personaLib</p>
+	<div id="content" class="container-fluid">
 	</div>
 
 	<!-- initialization script -->
 	<script type="text/javascript">
-		//	init canvas
-		//personaLibInit();
+		//	init personaLib
+		personaLibInit();
+		personaLibShowAllBooks();
 	</script>
 </body>
 
