--- a/webapp/personaLib.html
+++ b/webapp/personaLib.html
@@ -45,7 +45,37 @@
 		</form>
 	</nav>
 
-	<div id="content" class="container-fluid">
+	<!-- content -->
+	<div class="container-fluid">
+		<div id="content"></div>
+
+		<!-- add book Modal HTML -->
+		<div id="addBookModal" class="modal fade">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<form>
+						<div class="modal-header">
+							<h4 class="modal-title">New Book</h4>
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						</div>
+						<div class="modal-body">
+							<div class="form-group">
+								<label>Title</label>
+								<input type="text" class="form-control" required>
+							</div>
+							<div class="form-group">
+								<label>Author</label>
+								<input type="text" class="form-control" required>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+							<input type="submit" class="btn btn-success" value="Add">
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- initialization script -->
