--- a/webapp/personaLib.html
+++ b/webapp/personaLib.html
@@ -5,39 +5,67 @@
 <!-- Page header -->
 
 <head>
-	<title>personaLib</title>
+	<!-- Required meta tags for jQuery -->
+    	<meta charset="utf-8" />
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}"></link>
 
-	<link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
-	</link>
+    <style type="text/css">
+        .ajax-loader {
+            z-index: +100 !important;
+            background-color: rgba(255,255,255,0.7);
+            position: absolute;
+            width: 100%;
+            height:100%;
+        }
 
+        .ajax-loader img {
+            position: relative;
+            top:50%;
+            left:50%;
+        }
+    </style>
+	
+	<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+
 	<script type="text/javascript" src="{% static 'js/personaLib.js' %}"></script>
+
+	<!-- header -->
+	<title>personaLib</title>
 </head>
 
 <!-- Page body -->
-
 <body>
 	<!-- menu panel -->
 	{% csrf_token %}
 	<!-- Navigation bar -->
 	<nav class="navbar navbar-dark bg-dark">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-				 aria-expanded="false">
-					Menu
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Books</a>
-					<a class="dropdown-item" href="#">Authors</a>
-					<a class="dropdown-item" href="#">Publishers</a>
-				</div>
-			</li>
-		</ul>
+		<a class="navbar-brand" href="index.html">
+            		<img src="img/logo.png" width="30" height="30" alt="" />
+        	</a>
+		
+        	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContentViews" aria-controls="navbarContentViews" aria-expanded="false" aria-label="Toggle navigation">
+            		<span class="navbar-toggler-icon"></span>
+        	</button>
+
+		<div class="collapse navbar-collapse" id="navbarContentViews">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+					 aria-expanded="false">
+						Menu
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" onclick="javascript:personaLibShowAllBooks(); return false;">Books</a>
+						<a class="dropdown-item" href="#">Authors</a>
+						<a class="dropdown-item" href="#">Publishers</a>
+					</div>
+				</li>
+			</ul>
+		</div>
 
 		<form class="form-inline my-2 my-lg-0">
 			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,35 +74,39 @@
 		</form>
 	</nav>
 
-	<!-- content -->
-	<div id="content" class="container-fluid"></div>
+	<!-- container -->
+	<div class="container-fluid">
 
-	<!-- "add new book" form -->
-	<div id="addBookModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">
-						<h4 class="modal-title">New Book</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">
-						<div class="form-group">
-							<label>Title</label>
-							<input type="text" class="form-control" required>
+		<!-- "add new book" form -->
+		<div id="addBookModal" class="modal fade">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<form>
+						<div class="modal-header">
+							<h4 class="modal-title">New Book</h4>
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 						</div>
-						<div class="form-group">
-							<label>Author</label>
-							<input type="text" class="form-control" required>
+						<div class="modal-body">
+							<div class="form-group">
+								<label>Title</label>
+								<input type="text" class="form-control" required>
+							</div>
+							<div class="form-group">
+								<label>Author</label>
+								<input type="text" class="form-control" required>
+							</div>
 						</div>
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-success" value="Add">
-					</div>
-				</form>
+						<div class="modal-footer">
+							<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+							<input type="submit" class="btn btn-success" value="Add">
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
+
+		<!-- content -->
+		<div id="content"></div>
 	</div>
 
 	<!-- initialization script -->
