--- a/webapp/personaLib.html
+++ b/webapp/personaLib.html
@@ -70,7 +70,8 @@
 		<form class="form-inline my-2 my-lg-0">
 			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			<button type="button" class="btn btn-success" data-toggle="modal" data-target="#addBookModal">New Book</button>
+<!--			<button type="button" class="btn btn-success" data-toggle="modal" data-target="#addBookModal">New Book</button> -->
+			<button type="button" class="btn btn-success" onclick="javascript:$( #addBookModal ).show(); return false;">New Book</button>
 		</form>
 	</nav>
 
